[project]
name = "slack-mcp"
version = "0.1.0"
description = "MCP server exposing Slack Web API methods as tools"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.0b1",
    "slack-sdk",
    "aiohttp",
    "httpx",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
markers = ["integration: real Slack API tests"]
asyncio_mode = "auto"

[project.scripts]
slack-mcp = "slack_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "B008", # Depends() in function defaults is the FastMCP pattern
]

[tool.ruff.lint.per-file-ignores]
"src/slack_mcp/server.py" = ["E402", "F401"]  # side-effect imports after load_dotenv()
"tests/**" = ["F401"]  # integration tests import tools for skip-decorated test stubs
